Closed
Bug 1345654
Opened 8 years ago
Closed 8 years ago
Enable client-side stack walking for main process crashes on beta/release
Categories
(Toolkit :: Crash Reporting, defect)
Toolkit
Crash Reporting
Tracking
()
RESOLVED
FIXED
mozilla55
People
(Reporter: gsvelto, Assigned: gsvelto)
References
Details
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
benjamin
:
review+
gchang
:
approval-mozilla-aurora+
gchang
:
approval-mozilla-beta+
|
Details |
+++ This bug was initially created as a clone of Bug #1280477 +++
When I've implemented bug 1280477 I pref'd off gathering stack traces from main process crashes in beta/release. However in bug 1293656 I didn't add a similar limitation so we're currently in a situation where our beta release is gathering stacks for content crashes but not for main process crashes. Since this feature has proven itself stable let's turn it on across all channels and uplift to aurora/beta so that we're consistent with this feature.
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → gsvelto
Status: NEW → ASSIGNED
| Comment hidden (mozreview-request) |
Comment 2•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8845405 [details]
Bug 1345654 - Enable client-side stack-walking on beta and release for main process crashes
https://reviewboard.mozilla.org/r/118600/#review121142
Attachment #8845405 -
Flags: review?(benjamin) → review+
| Assignee | ||
Comment 3•8 years ago
|
||
Thanks for the review Benjamin, the try run is here: https://treeherder.mozilla.org/#/jobs?repo=try&revision=771dfd513b3b6561e30a5c10d99c9fd48510c4f6
Pushed by gsvelto@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/967422f569ae
Enable client-side stack-walking on beta and release for main process crashes r=bsmedberg
Comment 5•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
| Assignee | ||
Comment 6•8 years ago
|
||
Comment on attachment 8845405 [details]
Bug 1345654 - Enable client-side stack-walking on beta and release for main process crashes
Approval Request Comment
[Feature/Bug causing the regression]: This enables the functionality of bug 1280477 in beta/release
[User impact if declined]: Invisible to the user, but we don't get stacks in crash-pings from main process crashes in beta/release
[Is this code covered by automated tests?]: It's partially covered by tests and it's gone through extensive manual testing in QA
[Has the fix been verified in Nightly?]: Yes, it's been in nightly for months
[Needs manual test from QE? If yes, steps to reproduce]: It's already been manually tested
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: No risk
[Why is the change risky/not risky?]: In aurora it doesn't change anything since the functionality of bug 1280477 is already enabled there, it will have an impact only when it gets into beta
[String changes made/needed]: None
Attachment #8845405 -
Flags: approval-mozilla-aurora?
Comment 7•8 years ago
|
||
Comment on attachment 8845405 [details]
Bug 1345654 - Enable client-side stack-walking on beta and release for main process crashes
Help to get stacks in crash-pings from main process crashes. Aurora54+.
Attachment #8845405 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Updated•8 years ago
|
status-firefox54:
--- → affected
| Assignee | ||
Comment 8•8 years ago
|
||
status-firefox53:
--- → affected
| Assignee | ||
Comment 9•8 years ago
|
||
Comment on attachment 8845405 [details]
Bug 1345654 - Enable client-side stack-walking on beta and release for main process crashes
Approval Request Comment
[Feature/Bug causing the regression]: This enables the functionality of bug 1280477 in beta/release
[User impact if declined]: Invisible to the user, but we don't get stacks in crash-pings from main process crashes in beta/release
[Is this code covered by automated tests?]: It's partially covered by tests and it's gone through extensive manual testing in QA
[Has the fix been verified in Nightly?]: Yes, it's been in nightly for months
[Needs manual test from QE? If yes, steps to reproduce]: It's already been manually tested
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: This carries a very small risk of causing issues within the crashreporter since it will now invoke an external tool to gather stack traces.
[Why is the change risky/not risky?]: This has been enabled on nightly/aurora for months and it didn't cause issues, the risk is small because almost all the added code resides in an external tool that is run from the crashreporter. The idea is that even if we hit a significant bug in the tool, the worse that can happen is that we won't gather stack traces, but we won't cause issues to the crashreporter itself which should continue running unaffected.
[String changes made/needed]: None
Attachment #8845405 -
Flags: approval-mozilla-beta?
Comment 10•8 years ago
|
||
Comment on attachment 8845405 [details]
Bug 1345654 - Enable client-side stack-walking on beta and release for main process crashes
Enable getting stacks in crash-pings from main process crashes.
Attachment #8845405 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
| Assignee | ||
Comment 11•8 years ago
|
||
Thanks Gerry, I'm uplifting this right away.
| Assignee | ||
Comment 12•8 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•