Bug 1345654 - Enable client-side stack-walking on beta and release for main process crashes r=bsmedberg

MozReview-Commit-ID: APj6VBIW3l3